Fix file locations

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Aperture</title>
 </head>
 <body>
 <header class="header">
     <div class="header__container">
         <a href="#" class="header__logo">
-            <img src="/images/logo/aperture-logo.png" alt="Aperture logo" class="logo"/>
+            <img src="./images/logo/aperture-logo.png" alt="Aperture logo" class="logo"/>
         </a>
         <nav class="header__main-nav">
             <ul class="header__list">
@@ -31,7 +31,7 @@
 <main>
     <section class="about">
         <div class="about__image iad">
-            <img src="/images/about/aperture.png" alt="Photo of nature">
+            <img src="./images/about/aperture.png" alt="Photo of nature">
         </div>
         <div class="about__content">
             <h3 class="about__subtitle heading-quaternary">Photographer & Filmmaker</h3>
@@ -46,19 +46,19 @@
         </div>
         <ul class="icon-list">
             <li class="icon-list__icon">
-                <img src="/images/icons/clock-icon.svg" alt="Clock icon">
+                <img src="./images/icons/clock-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">1/2000s</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/circle-icon.svg" alt="Clock icon">
+                <img src="./images/icons/circle-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">f/11</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/iso-icon.svg" alt="Clock icon">
+                <img src="./images/icons/iso-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">100</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/location-icon.svg" alt="Clock icon">
+                <img src="./images/icons/location-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">Iceland</span>
             </li>
         </ul>
@@ -71,7 +71,7 @@
             <div class="work__row">
                 <div class="work__column">
                         <div class="work__image iad">
-                            <img src="/images/work/01.jpg" alt="Product photography"/>
+                            <img src="./images/work/01.jpg" alt="Product photography"/>
                         </div>
                         <h4 class="work__title heading-quaternary">
                             Product Photography
@@ -88,7 +88,7 @@
                 </div>
                 <div class="work__column">
                         <div class="work__image iad">
-                            <img src="/images/work/02.jpg" alt="Architecture photography"/>
+                            <img src="./images/work/02.jpg" alt="Architecture photography"/>
                         </div>
                         <h4 class="work__title heading-quaternary">
                             Architecture Photography
@@ -105,7 +105,7 @@
                 </div>
                 <div class="work__column">
                         <div class="work__image iad">
-                            <img src="/images/work/03.jpg" alt="Drone photography"/>
+                            <img src="./images/work/03.jpg" alt="Drone photography"/>
                         </div>
                         <h4 class="work__title heading-quaternary">
                             Drone Photography
@@ -123,7 +123,7 @@
                 </div>
                 <div class="work__column">
                         <div class="work__image iad">
-                            <img src="/images/work/04.jpg" alt="Wildlife photography"/>
+                            <img src="./images/work/04.jpg" alt="Wildlife photography"/>
                         </div>
                         <h4 class="work__title heading-quaternary">
                             Wildlife Photography
@@ -143,7 +143,7 @@
     </section>
     <section class="photo-block">
         <div class="photo-block__image iad">
-            <img src="/images/photo-block/01.jpg" alt="Sunset at Mount FujiSunset at Mount Fuji">
+            <img src="./images/photo-block/01.jpg" alt="Sunset at Mount FujiSunset at Mount Fuji">
         </div>
         <div class="photo-block__content">
             <h4 class="photo-block__title heading-quaternary">
@@ -155,19 +155,19 @@
         </div>
         <ul class="icon-list">
             <li class="icon-list__icon">
-                <img src="/images/icons/clock-icon.svg" alt="Clock icon">
+                <img src="./images/icons/clock-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">1''</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/circle-icon.svg" alt="Clock icon">
+                <img src="./images/icons/circle-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">f/16</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/iso-icon.svg" alt="Clock icon">
+                <img src="./images/icons/iso-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">400</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/location-icon.svg" alt="Clock icon">
+                <img src="./images/icons/location-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">Japan</span>
             </li>
         </ul>
@@ -188,23 +188,23 @@
         </div>
         <div class="tools__tool">
             <div class="tools__image iad">
-                <img src="/images/tools/01.jpg" alt="The tools that we use">
+                <img src="./images/tools/01.jpg" alt="The tools that we use">
             </div>
             <ul class="icon-list">
                 <li class="icon-list__icon">
-                    <img src="/images/icons/clock-icon.svg" alt="Clock icon">
+                    <img src="./images/icons/clock-icon.svg" alt="Clock icon">
                     <span class="icon-list__value">0,8''</span>
                 </li>
                 <li class="icon-list__icon">
-                    <img src="/images/icons/circle-icon.svg" alt="Clock icon">
+                    <img src="./images/icons/circle-icon.svg" alt="Clock icon">
                     <span class="icon-list__value">f/5,6</span>
                 </li>
                 <li class="icon-list__icon">
-                    <img src="/images/icons/iso-icon.svg" alt="Clock icon">
+                    <img src="./images/icons/iso-icon.svg" alt="Clock icon">
                     <span class="icon-list__value">100</span>
                 </li>
                 <li class="icon-list__icon">
-                    <img src="/images/icons/location-icon.svg" alt="Clock icon">
+                    <img src="./images/icons/location-icon.svg" alt="Clock icon">
                     <span class="icon-list__value">Sweden</span>
                 </li>
             </ul>
@@ -212,7 +212,7 @@
     </section>
     <section class="photo-block">
         <div class="photo-block__image iad">
-            <img src="/images/photo-block/02.jpg" alt="Monstera Leafs">
+            <img src="./images/photo-block/02.jpg" alt="Monstera Leafs">
         </div>
         <div class="photo-block__content">
             <h4 class="photo-block__title heading-quaternary">
@@ -224,19 +224,19 @@
         </div>
         <ul class="icon-list">
             <li class="icon-list__icon">
-                <img src="/images/icons/clock-icon.svg" alt="Clock icon">
+                <img src="./images/icons/clock-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">1/400s</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/circle-icon.svg" alt="Clock icon">
+                <img src="./images/icons/circle-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">f/3,5</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/iso-icon.svg" alt="Clock icon">
+                <img src="./images/icons/iso-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">100</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/location-icon.svg" alt="Clock icon">
+                <img src="./images/icons/location-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">Costa Rica</span>
             </li>
         </ul>
@@ -254,7 +254,7 @@
     </section>
     <section class="photo-block">
         <div class="photo-block__image iad">
-            <img src="/images/photo-block/03.jpg" alt="Star fall in the Himalayas">
+            <img src="./images/photo-block/03.jpg" alt="Star fall in the Himalayas">
         </div>
         <div class="photo-block__content">
             <h4 class="photo-block__title heading-quaternary">
@@ -267,19 +267,19 @@
         </div>
         <ul class="icon-list">
             <li class="icon-list__icon">
-                <img src="/images/icons/clock-icon.svg" alt="Clock icon">
+                <img src="./images/icons/clock-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">6''</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/circle-icon.svg" alt="Clock icon">
+                <img src="./images/icons/circle-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">f/11</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/iso-icon.svg" alt="Clock icon">
+                <img src="./images/icons/iso-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">800</span>
             </li>
             <li class="icon-list__icon">
-                <img src="/images/icons/location-icon.svg" alt="Clock icon">
+                <img src="./images/icons/location-icon.svg" alt="Clock icon">
                 <span class="icon-list__value">Nepal</span>
             </li>
         </ul>
@@ -299,7 +299,7 @@
             <div class="footer__row">
                 <div class="footer__column">
                     <a href="#" class="footer__logo">
-                        <img src="/images/logo/aperture-logo.png" alt="Aperture">
+                        <img src="./images/logo/aperture-logo.png" alt="Aperture">
                     </a>
                     <p class="footer__text text">Photographers & videographers capturing the world around us.</p>
                 </div>
@@ -348,23 +348,23 @@
             <ul class="footer__icons-list">
                 <li>
                     <a href="#">
-                        <img src="/images/social-icons/twitter.svg" alt="Twitter icon" class="footer__icon"/>
+                        <img src="./images/social-icons/twitter.svg" alt="Twitter icon" class="footer__icon"/>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/images/social-icons/instagram.svg" alt="Instagram icon" class="footer__icon"/>
+                        <img src="./images/social-icons/instagram.svg" alt="Instagram icon" class="footer__icon"/>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/images/social-icons/facebook.svg" alt="Facebook icon" class="footer__icon"/>
+                        <img src="./images/social-icons/facebook.svg" alt="Facebook icon" class="footer__icon"/>
                     </a>
                 </li>
             </ul>
         </section>
     </div>
 </footer>
-<script src="/js/script.js"/>
+<script src="./js/script.js"/>
 </body>
 </html>
