Fix some file locations

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
         <h2 class="clients__title heading-secondary">Past clients</h2>
         <p class="clients__subtitle subtitle">Trusted by your favourite companies</p>
         <ul class="clients__list">
-            <li class="clients__logo"><img src="/images/clients/hill-hayes.svg" alt="Hill hayes logo"></li>
-            <li class="clients__logo"><img src="/images/clients/stockholm.svg" alt="Riskgransen logo"></li>
-            <li class="clients__logo"><img src="/images/clients/studiocail.svg" alt="Studio Cai logo"></li>
-            <li class="clients__logo"><img src="/images/clients/chill-industries.svg" alt="Chill Industries logo"></li>
-            <li class="clients__logo"><img src="/images/clients/riskgransen.svg" alt="Stockholm logo"></li>
+            <li class="clients__logo"><img src="./images/clients/hill-hayes.svg" alt="Hill hayes logo"></li>
+            <li class="clients__logo"><img src="./images/clients/stockholm.svg" alt="Riskgransen logo"></li>
+            <li class="clients__logo"><img src="./images/clients/studiocail.svg" alt="Studio Cai logo"></li>
+            <li class="clients__logo"><img src="./images/clients/chill-industries.svg" alt="Chill Industries logo"></li>
+            <li class="clients__logo"><img src="./images/clients/riskgransen.svg" alt="Stockholm logo"></li>
         </ul>
     </section>
     <section class="photo-block">
@@ -365,6 +365,6 @@
         </section>
     </div>
 </footer>
-<script src="./js/script.js"/>
+<script src="./js/script.js"></script>
 </body>
 </html>
